2003-01-31  Dave Jones <davej@codemonkey.org.uk>

	* module/x86/op_model_athlon.c: Don't poke reserved bits in the counter.
	  Only rdmsr/wrmsr counters that we've enabled in the NMI handler.
	  ulong->uint conversion.

2003-01-30  Philippe Elie  <phil.el@wanadoo.fr>

	From Randolph Chung :

	* daemon/opd_cookie.h: add parisc support

2003-01-30  John Levon  <levon@movementarian.org>

	From Anton Blanchard :

	* daemon/opd_cookie.h: add ppc32/64

	* utils/op_start_25: fix start of kernel for ppc

2003-01-30  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol(get_kernel_range): Avoid using perl arithmetic.

2003-01-29  Dave Jones <davej@codemonkey.org.uk>

	* utils/opcontrol: Trying to use the options --pid-filter=pid and
	  --pgmr-filter=pgmr, opcontrol returned "command not found.
	  This was due to 2 missing 'test' statements.
	
2003-01-29  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_to_source.cpp: read vma with strtoull not strtoul fixing
	  32/64 failure to read output of objdump

2003-01-29  Dave Jones <davej@codemonkey.org.uk>

	* libop/op_cpu_type.c: Clue the user in on why the cpu type isn't
	  recognised, by suggesting the module wasn't loaded.
	* libop/op_events.c: Doh, unit masks use bit numbers, not values.

2003-01-28  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/op_help.c: get cpu type only if not forced on command line.
	  Avoid wrong warning about unsupported cpu type.

2003-01-27  Will Cohen  <wcohen@redhat.com>

	* daemon/opd_cookie.h(opd_nr_lookup_dcookie): Add ia64 version.

2003-01-27  Dave Jones <davej@codemonkey.org.uk>

	* libop/op_events.c: K8 HT events are utm_exclusive, not utm_bitmask
	* libop/op_events.c: Add additional K8 unit masks.

2003-01-23  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_interface_25.h:
	* daemon/opd_image.c: prepare drop modules support. exit() when
	  receiving unknown escape code.

2003-01-23   Randolph Chung  <tausq@debian.org>

	Added minor change: backward compatibility, u_int to uint, fix