@@ -1,3 +1,10 @@
+2003-01-31  Graydon Hoare  <graydon@redhat.com>
+
+	* libabi/abi.cpp
+	* libabi/abi_test.cpp
+	* libabi/op_import.cpp: Treat endianness as a property of the datum
+	being imported, rather than the memory architecture.
+
 2003-01-31  Dave Jones <davej@codemonkey.org.uk>
 
 	* module/x86/op_model_athlon.c: Don't poke reserved bits in the counter.
